<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.visian.team.notificationapp.MainActivity">

    <CheckBox
        android:id="@+id/groupe_satisfactionBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_world"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/groupe_eauBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <CheckBox
        android:id="@+id/politicsBox"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:text="@string/label_politics"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="240dp"/>
    <CheckBox
        android:id="@+id/groupe_eauBox"
        android:layout_width="160dp"
        android:layout_height="22dp"
        android:text="@string/label_business"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sportsBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <CheckBox
        android:id="@+id/technologyBox"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:text="@string/label_technology"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scienceBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <CheckBox
        android:id="@+id/scienceBox"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:text="@string/label_science"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/politicsBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <CheckBox
        android:id="@+id/sportsBox"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:text="@string/label_sports"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/technologyBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/activity_main_button_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="subscribe"
        android:text="@string/button_subscribe"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="148dp"
        android:layout_marginRight="55dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="376dp"
        android:layout_height="68dp"
        android:text="TextView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/politicsBox"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.525"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
